Fix styling. Align center

--- a/css/FrontPage.css
+++ b/css/FrontPage.css
@@ -1,5 +1,7 @@
+
 h1.frontTitle {
     text-align: center;
+    font-family: arial;
 }
 
 .Wt-auth-logged-in {
